--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,10 @@ set(CMAKE_CXX_FLAGS "-std=c++11 -g")
 project("design_pattern_cpp")
 
 set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
-add_executable(test1 src/test1.cpp)
+add_executable(testA
+                test/testA.cpp       
+                src/example/A.cpp
+                src/reflection/classfactory.cpp
+                src/reflection/classregister.cpp
+                src/reflection/classfield.cpp
+                src/reflection/classmethod.cpp)
